--- a/{{cookiecutter.project_slug}}/production.yml
+++ b/{{cookiecutter.project_slug}}/production.yml
@@ -65,6 +65,16 @@ services:
     image: {{ cookiecutter.project_slug }}_production_flower
     command: /start-flower
   {%- endif %}
+  {%- if cookiecutter.use_elasticsearch == 'y' %}
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.2
+    environment:
+      - xpack.security.enabled=false
+      - discovery.type=single-node
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+  {%- endif %}
   {%- if cookiecutter.cloud_provider == 'AWS' %}
 
   awscli:
