--- a/{{cookiecutter.project_slug}}/pytest.ini
+++ b/{{cookiecutter.project_slug}}/pytest.ini
@@ -2,5 +2,5 @@
 addopts = --ds=config.settings.test --reuse-db
 python_files = tests.py test_*.py
 {%- if cookiecutter.frontend_pipeline == 'Gulp' %}
-norecursedirs = node_modules
+norecursedirs = node_modules utils/*
 {%- endif %}
